--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/headbook?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=gatos123
+spring.datasource.username=headbook
+spring.datasource.password=headbook123
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.view.prefix: /WEB-INF/jsp/
